# Explorative-AD-in-Wind-Turbine-SCADA-Data-Using-an-AE

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml  requirements.txt
src/: step10_part2.ipynb  step11_part2_TOP_RE_detection1_wt12.ipynb  step11_part2_TOP_RE_detection2_wt15.ipynb  step12_part2_filtered_detections.ipynb  step1_preprocessing.ipynb  step2_preprocessing.ipynb  step3_preprocessing.ipynb  step6_pre_training_dry_run.ipynb  step7_Hyperp_tuning_layer.ipynb  step8_Hyperp_tuning_day1-7.ipynb  step9_part1.ipynb
src/further_content/: best_model_properties.ipynb  blade_pitch_angles.ipynb  dataset_overview.ipynb  kde_plots.ipynb  ks_test.ipynb  new_pc_filtering.ipynb  part1_1.ipynb  part1_2_train_set_correlations.ipynb  part2_farm_wide_exploration.ipynb  power_curve.ipynb  preprocessing.ipynb  train_data_infos.ipynb
src/helperfunctions/: controlled_env.py  detection.py  helper.py  intern_constants.py  preprocessing.py  pretty_print.py  training_lib.py
