[project]
name = "Open_Wind_SCADA_Anomaly_Detection"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shin-Young Hur"},
]
dependencies = [
    "joblib==1.4.2",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pyarrow==21.0.0",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "statsmodels==0.14.6",
    "torch==2.4.1",
    "tqdm==4.67.0",
    "openpyxl==3.1.5",
    "ipympl==0.9.8",
    "ipywidgets==8.1.5",
    "jupyter",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
packages = "find:"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tools.setuptools]
package_dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["helperfunctions*"]